Refactoring to the model MVC

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="4.0">
 <!--  <servlet>-->
 <!--    <servlet-name>primeiraServlet</servlet-name>-->
-<!--    <servlet-class>br.codandosimples.PrimeiraServlet</servlet-class>-->
+<!--    <servlet-class>br.codandosimples.servlets.PrimeiraServlet</servlet-class>-->
 <!--  </servlet>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>primeiraServlet</servlet-name>-->
